--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/bykowskiolaf/subscriber-tinder.git"
   },
   "author": "Olaf Bykowski",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/bykowskiolaf/subscriber-tinder/issues"
   },
