--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
 
-GOOGLE_CLIENT_ID=555806768380-5d6inlko8be7731tl8fufcm913gf77tk.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URL=http://localhost:3001/api/auth/google/redirect
