--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "subscriber-tinder",
   "version": "1.0.0",
   "description": "An app to manage your youtube subscribers list using the youtube API.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start:dev": "nodemon ./src/index.ts",
-    "start": "nodemon ./src/index.ts"
+    "start:dev": "cross-env NODE_ENV=development nodemon ./src/server.ts",
+    "start": "cross-env NODE_ENV=production node ./src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -18,17 +18,27 @@
   },
   "homepage": "https://github.com/bykowskiolaf/subscriber-tinder#readme",
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.22"
+  },
+  "dependencies": {
     "@types/express": "^4.17.17",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.22",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
+    "moment": "^2.29.4",
+    "mongoose": "^7.1.0",
+    "morgan": "^1.10.0",
+    "node": "^20.1.0",
+    "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "passport": "^0.6.0"
   }
 }
