--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "An app to manage your youtube subscribers list using the youtube API.",
   "main": "server.js",
   "scripts": {
-    "start:dev": "cross-env NODE_ENV=development nodemon ./src/server.ts",
-    "start": "cross-env NODE_ENV=production node ./src/server.ts"
+    "start:dev": "kill $(lsof -t -i:3000) | cross-env NODE_ENV=development nodemon ./src/server.ts",
+    "start": "cross-env NODE_ENV=production node ./src/server.ts",
+    "build-css": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/styles.css"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,8 @@
   "homepage": "https://github.com/bykowskiolaf/subscriber-tinder#readme",
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
