--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
   "name": "subscriber-tinder",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "An app to manage your youtube subscribers list using the youtube API.",
   "main": "server.js",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "start:dev": "kill $(lsof -t -i:3000) | cross-env NODE_ENV=development nodemon ./src/server.ts",
-    "start": "cross-env NODE_ENV=production node ./src/server.ts",
-    "build-css": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/styles.css"
+    "start": " cross-env NODE_ENV=development nodemon ./src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -20,18 +20,18 @@
   "homepage": "https://github.com/bykowskiolaf/subscriber-tinder#readme",
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.22",
-    "tailwindcss": "^3.3.2"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
@@ -40,6 +40,7 @@
     "node": "^20.1.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "pnpm": "^8.6.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
